--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		rel="stylesheet"
 		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
 	/>
+	<link rel="stylesheet" href="./styles.css">
 	<title>Create A Sidebar</title>
 </head>
 <body>
