--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	<title>Create A Sidebar</title>
 </head>
 <body>
+	<button class="sidebar-toggle">
+		<i class="fas fa-bars"></i>
+	</button>
 	<script src="./app.js"></script>
 </body>
 </html>
