--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 	<button class="sidebar-toggle">
 		<i class="fas fa-bars"></i>
 	</button>
+	<aside class="sidebar">
+		<div class="sidebar-header">
+			<img src="./logo.svg" alt="logo" class="logo">
+		</div>
+	</aside>
 	<script src="./app.js"></script>
 </body>
 </html>
