added close-btn, fa-times

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 	<aside class="sidebar">
 		<div class="sidebar-header">
 			<img src="./logo.svg" alt="logo" class="logo">
+			<button class="close-btn">
+				<i class="fas fa-times"></i>
+			</button>
 		</div>
 	</aside>
 	<script src="./app.js"></script>
